feat: Reading (Seoul)Spot Excel